Possible fix for dropdown shifting

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: black !important;
+  overflow-y: scroll;
 }
 
 @font-face {
@@ -142,7 +143,7 @@ td {
   width: 100%;
 }
 
-.name-dropdown{
+.name-dropdown {
   text-align: center;
   margin-left: -3.5em;
   max-height: 250px;
